# procvamp

./: Cargo.toml  \
src/: main.rs
src/gui/: mod.rs
src/gui/main/: main.rs  mod.rs
src/gui/main/attach/: attach.rs  mod.rs
src/gui/main/debug/: debug.rs
src/gui/main/toolbar/: toolbar.rs
src/gui/windows/: mod.rs
src/gui/windows/allocation_view/: allocation_view.rs  mod.rs
src/gui/windows/disassembly_view/: disassembly_view.rs  mod.rs
src/gui/windows/function_view/: function_view.rs  mod.rs
src/gui/windows/imports_view/: imports_view.rs  mod.rs
src/gui/windows/module_view/: mod.rs  module_view.rs
src/gui/windows/scanner_view/: mod.rs  scanner_view.rs
src/log/: log.rs
src/memory/: mod.rs
src/memory/breakpoint/: mod.rs
src/memory/process/: mod.rs  process.rs
src/memory/process/iterators/: allocation_iter.rs  mod.rs  module_iter.rs  process_iter.rs
src/pe/: pe.rs
