[package]
name = "procvamp"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_demo_lib = { version = "0.23.0", features = ["syntect"] }
egui_extras ="0.23.0"
syntect = "5.1.0"
egui_dock = "0.14"
iced = "0.13.1"
windows = {version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_StationsAndDesktops", "Win32_System_Memory", "Storage", "Foundation", "Win32_UI_Shell"] }
anyhow = "1.0.95"
fern = "0.7.1"
log = "0.4.25"
humantime = "2.1.0"
iced-x86 = "1.21.0"
thiserror = "2.0.11"
